Fix bug where nav boxes were overlapping other site elements

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -204,7 +204,6 @@ li.active a{
 }
 
 .nav-boxes{
-    height: 25em;
     text-align: center;
     padding-top: 3em;
     padding-bottom: 3em;
@@ -213,7 +212,7 @@ li.active a{
     width: 100%;
 }
 .nav-boxes div{
-    height: 100%;
+    height: 26em;%;
 }
 .nav-boxes .col h3{
     height: 25%;
@@ -464,6 +463,9 @@ li.active a{
         height: auto;
         margin: 0;
         width: 100%;
+    }
+    .nav-boxes img{
+        width: 65%;
     }
     .site-branding img{
         width: 100%;
